--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,1 @@
-# Alteração de porta
-#server.port=${port:8081}
-
-# Conexão
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=test
