--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
+
+default.sender=sergiobonani@gmail.com
+default.recipient=sergiobonani@gmail.com
